# src/routes/auth.routes.ts
@@ -73,4 +73,25 @@ router.post('/token', async (req, res): Promise<any> => {
     return result;
 });
 
+router.get('/:id', async (req, res): Promise<any> => {
+    const authRepository = new AuthMongooseRepository();
+    const logService = new LogService();
+    const tokenService = new JwtTokenService(config.JWT_SECRET);
+    const passwordService = new BcryptPasswordService(config.PASSWORD_SALTS);
+    const authService = new AuthService({
+        authRepository
+    });
+    const databaseService = new MongooseService(config.MONGO_URI);
+    const authController = new AuthController({
+        databaseService,
+        authService,
+        logService,
+        passwordService,
+        tokenService
+    });
+
+    const result = await authController.getUser(req, res);
+    return result;
+});
+
 export default router;
